# magma-hermes-provider

./: .gitignore  README.md  install.ps1  install.sh  plugin.yaml  pyproject.toml
magma/: __init__.py  answer_formatter.py  distiller.py  graph_db.py  keyword_enrichment.py  note_store.py  requirements.txt  temporal_parser.py  trg_memory.py  vector_db.py
