[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hermes-magma-memory"
version = "1.0.0"
description = "MAGMA Multi-Graph Agentic Memory Provider for Hermes Agent (ACL 2026). Auto-records conversation events into 4 orthogonal relation graphs with intent-aware traversal retrieval."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "networkx>=3.0",
]

[project.urls]
"Paper" = "https://arxiv.org/abs/2601.03236"
"Source" = "https://github.com/FredJiang0324/MAGMA"

[tool.setuptools.packages.find]
include = ["magma*"]
